[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
fastapi = "^0.115.2"
python-multipart = "^0.0.12"
email-validator = "^2.1.0.post1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^9.0.0"
pydantic = ">2.0"
emails = "^0.6"

gunicorn = "^23.0.0"
jinja2 = "^3.1.4"
alembic = "^1.13.3"
httpx = "^0.27.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
sqlmodel = "^0.0.22"
# Pin bcrypt until passlib supports the latest
bcrypt = "4.2.0"
pydantic-settings = "^2.5.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.16.0"}
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.8.0"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
types-passlib = "^1.7.7.20240106"
coverage = "^7.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
